--- a/Interfaces/bootstrap/Ejemplos/cap05_ejemplo05.html
+++ b/Interfaces/bootstrap/Ejemplos/cap05_ejemplo05.html
@@ -1,32 +1,34 @@
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-  </head>
-  <body>
+</head>
+
+<body>
     <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Título</a>
-          <!-- Boton cuando la barra está colapsada -->
-          <button type="button" class="navbar-toggle collapsed" 
-            data-toggle="collapse" data-target="#menu" aria-expanded="false">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Título</a>
+                <!-- Boton cuando la barra está colapsada -->
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+            </div>
+            <!-- añadimos el listado con los enlaces -->
+            <div class="collapse navbar-collapse" id="menu">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Enlace 1</a></li>
+                    <li><a href="#">Enlace 2</a></li>
+                </ul>
+            </div>
         </div>
-        <!-- añadimos el listado con los enlaces -->
-        <div class="collapse navbar-collapse" id="menu">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Enlace 1</a></li>
-            <li><a href="#">Enlace 2</a></li>
-          </ul>
-        </div>
-      </div>
     </nav>
-  </body>
+</body>
+
 </html>
