--- a/Cliente/_Ex2Rec/ej_3.html
+++ b/Cliente/_Ex2Rec/ej_3.html
@@ -36,9 +36,9 @@
 
                 var table = document.getElementById("tabla");
                 table.empty();
-                // var trTitulo = document.createElement("tr");
-                // trTitulo.innerHTML = "<th> Nombre </th><th> País </th><th> Estilo </th><th> Instrumentos </th>";
-                // table.appendChild(trTitulo);
+                var trTitulo = document.createElement("tr");
+                trTitulo.innerHTML = "<th> Nombre </th><th> País </th><th> Estilo </th><th> Instrumentos </th>";
+                table.appendChild(trTitulo);
 
                 for (var j = 0; j < obj.length; j++) {
                     var table = document.getElementById("tabla");
